# fastapi-iris-serving-tutorial

./: README.md  pyproject.toml  start.sh
.github/workflows/: google-cloudrun-docker.yml
app/: main.py  utils.py
app/core/: model_registry.py
app/core/middlewares/: metric_middleware.py
app/routers/: ml_router.py
app/schemas/: request.py  response.py
