[tool.poetry]
name = "ml-api-server"
version = "0.1.0"
description = ""
authors = ["ilevk <kcs93023@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.1"
uvloop = "^0.19.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
scikit-learn = "^1.4.1.post1"
mlflow = "1.27.0"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
